deploy-gke/deployment-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: nginx-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-dp-1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx-dp-1
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
          - containerPort: 80
        resources: {}
status: {}
