deploy-gke/service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nginx-service
  name: nginx-service
spec:
  ports:
  - name: nginx-http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-dp-1
  type: ClusterIP
status:
  loadBalancer: {}
