deploy-gke/ingress-nginx.yaml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "nginx-ingress"
  namespace: "default"
spec:
  defaultBackend:
    service:
      name: "nginx-service"
      port:
        number: 80
status:
  loadBalancer: {}
